finished blog post and toplevel blog page to a sufficient degree now, added more images as well

--- a/blogTop.html
+++ b/blogTop.html
@@ -28,7 +28,10 @@
                 <div class="textbox">
                     <h1>Blog</h1>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime nostrum similique vel deserunt asperiores culpa necessitatibus dignissimos, eius corrupti placeat possimus nesciunt impedit ipsum dolor nam perferendis, doloremque illo consequatur quo aut veniam! Aperiam iste corporis a, laudantium et ipsam facilis placeat repellat, fuga, quaerat voluptates ducimus? Quas odio labore eligendi voluptate non enim, ducimus dolorum totam deserunt sint. Tempora quia modi doloremque iusto alias fugiat quod minima ut saepe quibusdam. Provident aut dolorem quo ad laudantium nemo, saepe optio. Consectetur totam, ab ad, deserunt sapiente omnis minus obcaecati dolor cum at nam reprehenderit repellat, ipsam nostrum eius quam delectus impedit? Maxime dolorem recusandae aspernatur dolore, corrupti perferendis commodi accusantium dolores laborum earum? Ex mollitia nam numquam, assumenda fuga vel quis laudantium accusamus, nisi sed explicabo quae, possimus modi quisquam impedit soluta sequi repellendus est sint voluptatibus placeat? Nihil nam animi sed asperiores corrupti nostrum, fuga eum earum consequuntur, suscipit, eos voluptates? Inventore debitis tempore eum numquam cum reiciendis architecto placeat, deleniti ratione. Necessitatibus quod ea totam obcaecati eos minus suscipit consequuntur, illum temporibus molestias sunt possimus praesentium quibusdam dignissimos, fugiat quidem ratione consequatur, unde molestiae. Corrupti tempore, aut ea ex quod repellendus sed, corporis harum officia sunt obcaecati cum!
+                        On this page I want to share everything besides digital art. 
+                        Things and projects that are off canvas. IRL "art" if you want, but I rather refrain from calling anything on here art. More like projects of artisan nature.
+                        I still want to keep things separate from engineering projects and focus on crafts with aspects of aesthetics, maybe cooking related or functional use like furniture.
+                        So to whoever this may concern, I hope you enjoy, learn or maybe are inspired from these.
                     </p>
                 </div>
                 <section class="blogtop-container">
@@ -58,38 +61,27 @@
                             <div class="blogtop-item-text">
                                 <h2>Goldsmithing</h2>
                                 <p>
-                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
+                                    A short introduction and my journey into the craft of goldsmithing.
+                                    From selecting the raw materials and tools to the intricacies of the processes involved, I guide you through my roadblocks and explain how I have overcome them.
+                                    Pictures of the final products are included of course :)
                                 </p>
                             </div>
                         </div>
                     </a>
-                    <a href="blogs/goldsmithing.html">
+                    <a href="">
                         <div class="blogtop-item">
                                 <div class="blogtop-item-img">
-                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/default.jpg" alt="a doctor and an engineer opposite of each other">
                                 </div>
                                 <div class="blogtop-item-text">
-                                    <h2>Goldsmithing</h2>
+                                    <h2>Coming Soon!</h2>
                                     <p>
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
                                     </p>
                                 </div>
                             
                         </div>
                     </a>
-                    <a href="blogs/goldsmithing.html">
-                        <div class="blogtop-item">    
-                                <div class="blogtop-item-img">
-                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="a doctor and an engineer opposite of each other">
-                                </div>
-                                <div class="blogtop-item-text">
-                                    <h2>Goldsmithing</h2>
-                                    <p>
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus, veritatis hic nulla laudantium dolorem, possimus ipsum aliquid ab est aperiam deserunt. A, placeat non? Facere, numquam amet. Nesciunt, earum.
-                                    </p>
-                                </div>
-                        </div>
-                    </a>
+
                 </section>
             </main>
         </div>
