--- a/blogs/goldsmithing.html
+++ b/blogs/goldsmithing.html
@@ -35,7 +35,7 @@
                         <li><a href="#section1">Inspiration</a></li>
                         <li><a href="#section2">Prerequisites</a></li>
                         <li><a href="#section3">Prototyping</a></li>
-                        <li><a href="#section4">The Thing</a></li>
+                        <li><a href="#section4">The Process</a></li>
                         <ul class="blog-nav-menu-second">
                             <li><a href="#section41">Shaping</a></li>
                             <li><a href="#section42">Annealing</a></li>
@@ -67,7 +67,7 @@
                         With the enticement sorted out, I just needed something smart and quirky to do.
                         And this design by <a href="https://www.desideriacollection.com/">Desideria Collection</a> came for that calling.
                         They produce a necklace piece, that comes right out the genre pocket puzzle.
-                        The necklace piece "Ring Necklace" can hold a ring securely in display without any hinge or mechanism to hold it and can be put on without taking the necklace off.
+                        The necklace piece "Ring Necklace" can hold a ring securely in display without any hinge or mechanism to hold it and can be put on without taking off the necklace.
                         A really amazing design and I endorse their page and business fully! <br>
                         But let's cut to the chase, shall we?
                     </p>
@@ -77,13 +77,13 @@
                         Prerequisites
                     </h2>
                     <p>
-                        In most workshops of a goldsmith you will find one heavy duty machine. A roller to cold-roll the bullions in different gauges roughly to size.
+                        In most workshops of goldsmiths you will find one heavy duty machine. A roller to cold-roll the bullions in different gauges roughly to size.
                         If you are doing this regularly and even multiple times a day as a business, this can greatly speed up the process and increase quality of life, all the while not necessary.
                         You could take on the journey, throw the piece on your anvil and smash it like the Hulk into submission.
                         A workable solution, but requires an anvil and probably very leniant neighbors if you happen to live in an appartment building. <br>
-                        One of which is true for me, so I had to come up with another idea. 
-                        Instead of manufacturing the design from a solid piece of gold, I would take a round gold profile to achieve the perpendicular shift between the vertical and horizontal segments with minimal use of a hammer.
-                        But let's establish a list for what is needed in that project first:
+                        One of which meets me, so I had to come up with another idea. 
+                        Instead of manufacturing the design from a solid piece of gold, I would take a round gold tube to achieve the perpendicular shift between the vertical and horizontal segments with minimal use of a hammer.
+                        But let's establish a list of what is needed in that project first:
                     </p>
                     <ul>
                         <li>Gold profile ~100mm with an outer diameter of 3mm</li>
@@ -116,13 +116,13 @@
                             However, it turns out that gold is not that easily accessible, especially in a specific extrusion format and dimension.
                             I didn't find any source within the Netherlands that provided round gold profiles or even at all in retail.
                             So I opted to source the raw materials from a UK website, that provided the piece in the designated format.
-                            In order to avoid complex tax filings between countries (gold bullions for investment purposes are taxed differently than raw materials, so there is particular interest in cross country gold trade by tax offices), I tried to stay within the bounds to still be taxed right through the website and just buy one piece.
+                            In order to avoid complex tax filings between countries (gold bullions for investment purposes are taxed differently than raw materials, so there is particular interest in cross country gold trade by tax offices due to fraud), I tried to stay within the bounds to still be taxed right through the website and just buy one piece.
                             And here arises the necessety to prototype the manufacturing process regardless. <br>
                         </p>
                         <p>
                             Selecting a substitute for gold is fairly easy. Copper pipes are a common choice in any hobby store for a lot of thermal installations.
                             Copper is very similar in thermal conductivity, melting point and elastic module, which makes it perfect to test out how the deformation affects the material.
-                            And without getting into too much detail and anticipate the process, I want to share what I learned:
+                            And without getting into too much detail and anticipate the process, I want to share what I have learned:
                         </p>
                         <ul>
                             <li>It is not possible with hammering and filing alone to remove the separation of the metal sheets at the ends to a negligible degree. This is not entirely cosmetic, since this is also true for the holes in which the chain may get stuck sliding through.</li>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="blog-section" id="section4">
-                    <h2>The Thing</h2>
+                    <h2>The Process</h2>
                     <div class="blog-section-two" id="section41">
                         <h3>Shaping</h3>
                         <p>
@@ -170,8 +170,24 @@
                             The cookbook continues as follows. Take equal parts of boric acid and denatured ethanol and mix it. 
                             Before the work piece touches any flame, it should be dunked into this mixture.
                             The ethanol works as a carrier liquid to cover and adher to the work piece surface.
-                            The evaporating ethanol leaves a film of boric acid on the shiny metal to protect it from unnecessary oxidation during the process.
+                            The evaporating ethanol leaves a film of boric acid on the shiny metal to protect it from unnecessary oxidation during the process. <br>
+                            In my case, since the tube was still fairly straight, I also opted to not take out the torch, but utilize my gas stove to be able to heat up the work piece much more uniformly.
+                            This worked like a charm after dialing in some lower setting. Definitely take your time to not go above the right temperature. <br>
+                            After the annealing it was noticably easier to work the gold. I tried to finish the rough shape, bends and buckling of the tube, but left the ends not yet completely squished down.
+                            Why I did that, will come to light in the next section.
                         </p>
+                        <div class="blog-pic-row">
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-25.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-25.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                                </a>
+                            </div>
+                            <div class="blog-pic-row-pic">
+                                <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-26.jpg" class="glightbox">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/goldsmithing/yannick-schulz-goldsmithing-26.jpg" alt="two people sitting opposite each other having a drink, while two shadows of the left person fight in the background" class="gallery-img">
+                                </a>
+                            </div>
+                        </div>                        
                     </div>
                     <div class="blog-section-two" id="section43">
                         <h3>Soldering</h3>
@@ -189,13 +205,13 @@
                             Following that, it was hard to make the solder flow into the solder joint or area I wanted it to.
                             This also impaired the left wire, right torch kind of way, because as soon as I was able to bring the solder up to temperature, the piece already cooled down and the liquified solder reather stuck to itself and formed a drop at its end.
                             So I had to change the gameplan. Finding a way to heat up both, solder as well as the piece, and decouple the amount of solder that I need to use from the rest of the solder so it can't stick to it.
-                            But with this realization, I have used up all of the solder I have acquired earlier and shipping from UK was not in the time budget anymore.
+                            But with this realization, I have used up all of the solder I have acquired earlier and shipping from the UK was not in the time budget anymore.
                             Instead, I made some calls to local goldsmiths, politely asking if they would sell me some gold solder.
                             And before I get to the person who made my day, I have another little excursion. <br>
-                            So, not being originally dutch, I didn't know a fact about the jewellery market here.
+                            Not being originally dutch, I didn't know a fact about the jewellery market here.
                             I always thought yellow gold jewellery comes in 9, 14 and 24 karat, which refers to the gold content in the alloy, 33.3%, 66.6% and 99.9% respectively.
                             In fact there are actually even more desired compositions.
-                            Since gold is a fairly soft metal, 9kt gold, while being also the cheapest, is not only the most durable, but is also supposed to be the easiest to work with and excellent choice for me.
+                            Since gold is a fairly soft metal, 9kt gold, while being also the cheapest, is not only the most durable, but is also supposed to be the easiest to work with and therefore an excellent choice for me.
                             The Netherlands however, in their infinite wisdom, decided to drive a different path. For whatever reason, there is a legal limit to gold.
                             So, as a person that sells jewllery, if you were to sell a 9kt gold ring, you cannot call it a gold ring.
                             It may look like gold, it may contain gold, but it is a "silver ring", which obviously is less marketable than a "gold ring".
@@ -203,10 +219,10 @@
                             But enter the stage <a href="https://www.odinski.com/">Sonja Hunefeld</a> from Odinski Jewels in Den Haag.
                             In fact, also special thanks to <a href="https://www.daphnemeesters.nl/">Dafne Meesters</a> and <a href="https://lauriehermeler.nl/">Laurie Hermeler</a> for directing me and explaining the dutch 9kt situation to me. 
                             When I was stranded without any solder, she agreed to sell me a piece of a, not 9kt, but 14kt gold solder plate, with which I was able to at least continue. <br>
-                            Going back to the actual issue at hand from <a href="#section3">Section 3</a>. the two layers at the ends had to be joined by soldering.
+                            Going back to the actual issue at hand from <a href="#section3">Section 3</a>. The two layers at the ends had to be joined by soldering.
                             Now, with the additional information on how to approach gold soldering, I cut two pieces of the gold solder plate in shape to just fit into the squished tube.
-                            The plan is to clamp the solder inside the tube in order to heat up, both work piece and solder unifromly and let the solder not escape anywhere it is not supposed to flow.
-                            As said as done it worked like a charm. It has to be said, that there is a degree of color difference between the 9kt and 14kt gold, however, this is expected to be negligible, once the piece is done with a mirror finish.
+                            The plan is to clamp the solder inside the tube in order to heat up both, work piece and solder, unifromly and let the solder not escape anywhere it is not supposed to flow.
+                            Done as said and it worked like a charm. It has to be said, that there is a degree of color difference between the 9kt and 14kt gold, however, this is expected to be negligible, once the piece is done with a mirror finish.
                         </p>
                         <div class="blog-pic-row">
                             <div class="blog-pic-row-pic">
@@ -234,7 +250,7 @@
                             Much more difficult is the act of grinding down the surfaces and edges.
                             Not because of the fact that it is a particularly streigneous task, but because of what was learned in prototyping in <a href="#section3">Section 3</a>.
                             Grinding too greedily can result in a wall breakthrough in particular areas, such as the buckling in the bending apices.
-                            But the plan was pretty clear, getting the surfaces flat and shape the rest of the piece by a medium grid file, use coarse sand paper on all negative spaces, such as aforementioned dangerous area and consecutively increase the grid up to 5000.
+                            But the plan was pretty clear, getting the surfaces flat and shape the rest of the piece by a medium grid file, use coarse sand paper on all negative spaces, such as aforementioned dangerous areas and consecutively increase the grid up to 5000.
                             All that would be left is polishing the piece with jeweller's rouge. Jeweller's rouge is a fine reddish colored polishing compound that leaves a close to mirror finish.
                             However, not speaking from particular experience or authority, I don't really think it matters too much, which compound you choose in the end. 
                             Reading up on it, leaves you with more questions than answers regarding which is the best one to use and it feels more like a bro science than anything else.
@@ -253,7 +269,16 @@
                         Results
                     </h2>
                     <p>
-
+                        Although, this project didn't end up being a total win (it may in the future), I had a lot of fun trying things out and solving my problems with minimal equipment.
+                        And because I had so much fun, I got back to goldsmithing for other, a little simpler projects, a ring and another necklace piece.
+                        And I also purchased my first piece of proper Jeweller's equipment, a ring guide. It is quite paramount to form a proper circle and also manufacture it to the right size.
+                        For the ring I selected a piece that I came across researching gold soldering. It is a simple design of a knotted wire.
+                        It is so simple, but looks so intricate and elegant.
+                        And since the knot design appealed to me so much, I tried to manufacture a celtic trinity knot. I am huge fan of Ireland and thought this knotted design looks very appealing, too. <br><br>
+                        I hope you enjoyed this post, there is still so much more to explore, I would really love to get a little into setting stones or even casting granulate in resin. 
+                        For example, I saw someone casting coprolite, which is fossilized dinosaur poop into a ring. 
+                        Coprolite consists in parts of digested bone (calcium-phosphate), which becomes flourescent through the fossilization that occured.
+                        It may be a little controversial mineral to put on a ring, but it really caught my eye and interest! We'll see, a story for another time.
                     </p>
                     <div class="blog-pic-row">
                         <div class="blog-pic-row-pic">
