fixed a broken link

--- a/blogTop.html
+++ b/blogTop.html
@@ -71,7 +71,7 @@
                     <a href="">
                         <div class="blogtop-item">
                                 <div class="blogtop-item-img">
-                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/default.jpg" alt="a doctor and an engineer opposite of each other">
+                                    <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/blog/yannick-schulz-blog-default.jpg" alt="a doctor and an engineer opposite of each other">
                                 </div>
                                 <div class="blogtop-item-text">
                                     <h2>Coming Soon!</h2>
