added more formatting, icon to tab and fixed a title

--- a/about.html
+++ b/about.html
@@ -25,11 +25,9 @@
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/about/yannick-schulz-excavator-lake.jpg" alt="coverphoto silhouette of excavator and splashing water at a lake">
             </div>
 
-            <main class="about-page content-color page-heading">
+            <main class="about-page content-color">
                 <section class="about-text">
-                    <h1>
-                        About
-                    </h1>
+                    <h1 class="page-heading-single">About</h1>
                     <p>
                         Hello world! This is Yannick :)
                     </p>
