--- a/blogTop.html
+++ b/blogTop.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Photography</title>
+        <title>Blog</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
@@ -26,7 +26,7 @@
             </div>
             <main class="gallery-page content-color page-heading">
                 <div class="textbox">
-                    <h1>Blog</h1>
+                    <h1 class="page-heading-single">Blog</h1>
                     <p>
                         On this page I want to share everything besides digital art. 
                         Things and projects that are off canvas. IRL "art" if you want, but I rather refrain from calling anything on here art. More like projects of artisan nature.
