--- a/illustrations.html
+++ b/illustrations.html
@@ -24,10 +24,10 @@
             <div class="coverphoto">
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-illustrationCover.png" alt="coverphoto silhouette holding a camera">
             </div>
-            <main class ="gallery-page content-color page-heading">
+            <main class ="gallery-page content-color">
                 <div class="first-element">
                     <div class="textbox">
-                        <h1>Illustrations</h1>
+                        <h1 class="page-heading-single">Illustrations</h1>
                         <h2>Magazines</h2>
                         <p>
                             After I was introduced to InDesign and Scribus in my senior year in highschool, taking part as a board member and designing the yearbook, I was overwhelmed by the power of layouting tools.
