--- a/photography.html
+++ b/photography.html
@@ -24,10 +24,10 @@
             <div class="coverphoto">
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
             </div>
-            <main class ="gallery-page content-color page-heading">
+            <main class ="gallery-page content-color">
                 <div class="first-element">
                     <div class="textbox">
-                        <h1>Photography</h1>
+                        <h1 class="page-heading-single">Photography</h1>
                         <h2>Staging</h2>
                         <p>
                             What I probably enjoy most in photography is to bring a certain idea and inspiration to the silver bromide, or ones and zeros for that fact.
