added icon to all pages

--- a/blogTop.html
+++ b/blogTop.html
@@ -7,6 +7,7 @@
         <title>Blog</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/glightbox.min.css">
+        <link rel="icon" href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/yannick-schulz-icon.png">
     </head>
     <body class="body-page">
         <div class="header-offset">
