--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Yannick Schulz</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/yannick-schulz-icon.png">
     </head>
     <body class="landing-body">
         <header>
